# Sopor

./: BuildInstaller.bat  Readme.txt  SoporInstaller.iss
Binaries/Win64/ue4ss/: Stalker2-5.1.1-0+++UE5+Release-5.1-74db633.usmap  UE4SS-settings.ini
Binaries/Win64/ue4ss/Mods/: mods.json  mods.txt
Binaries/Win64/ue4ss/Mods/SoporCombatSleep/dlls/: SoporCombatSleep.ini
Binaries/Win64/ue4ss/Mods/shared/types/: ACLPlugin.lua  ACLPlugin_enums.lua  AC_PerfCameraComponent.lua  AC_PerfCaptureComponent.lua  AIModule.lua  ALI_CharacterBoneControllers.lua  ALI_CharacterWeapon.lua  AkAudio.lua  AkAudio_enums.lua  AnimBP_AK74_fp.lua  AnimBP_Fac.lua  AnimBP_Human.lua  AnimBP_Human_AK74.lua  AnimBP_Human_Obrez.lua  AnimBP_Human_TOZ34.lua  AnimBP_Human_ThreeLine.lua  (+421 more)
Binaries/Win64/ue4ss/liveview/: filters.meta.json
Binaries/Win64/ue4ss/watches/: watches.meta.json
CANCER/Stalker2/Content/Paks/~mods/: RemoveGammaBlinkingStalker2-Windows.pak  RemoveGammaBlinkingStalker2-Windows.ucas  zzzzzzzzzz_SOPOR_DEFAULTandCONSUMABLESandCANCER.pak
DEFAULT/Stalker2/Content/Paks/~mods/: zzzzzzzzzz_SOPOR_DEFAULT.pak
DEFAULT_AND_CONSUMABLES/Stalker2/Content/Paks/~mods/: zzzzzzzzzz_SOPOR_DEFAULTandCONSUMABLES.pak
DEFAULT_NO_FAINT/Stalker2/Content/Paks/~mods/: zzzzzzzzzz_SOPOR_DEFAULT_NO_FAINT.pak
FATIGUE_ONLY/Stalker2/Content/Paks/~mods/: zzzzzzzzzz_SOPOR_FATIGUE_ONLY.pak
FATIGUE_ONLY_NO_FAINT/Stalker2/Content/Paks/~mods/: RemoveGammaBlinkingStalker2-Windows.utoc  zzzzzzzzzz_SOPOR_FATIGUE_ONLY_NO_FAINT.pak
SoporCombatSleep/: CMakeLists.txt  SoporCombatSleep.ini  dllmain.cpp
